Enforce that \cC can only be followed by a match-all dot (or group)

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -680,7 +680,6 @@
 %   \item Test for the maximum register \cs{c_max_register_int}.
 %   \item Find out whether the fact that |\W| and friends match the
 %     end-marker leads to bugs. Possibly update \cs{__regex_item_reverse:n}.
-%   \item Enforce that |\cC| can only be followed by a match-all dot.
 %   \item The empty cs should be matched by |\c{}|, not by
 %     |\c{csname.?endcsname\s?}|.
 % \end{itemize}
@@ -3005,6 +3004,7 @@
                 \else:
                   \c_@@_catcode_in_class_mode_int
                 \fi:
+            \token_if_eq_charcode:NNT C #2 { \@@_compile_c_C:NN }
           }
       }
       { \cs_if_exist_use:cF { @@_compile_c_#2:w } }
@@ -3012,6 +3012,26 @@
             \__msg_kernel_error:nnx { kernel } { c-missing-category } {#2}
             #1 #2
           }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[aux]{\@@_compile_c_C:NN}
+%   If |\cC| is not followed by |.| or |(...)| then complain because
+%   that construction cannot match anything, except in cases like
+%   |\cC[\c{...}]|, where it has no effect.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_compile_c_C:NN #1#2
+  {
+    \token_if_eq_meaning:NNTF #1 \@@_compile_special:N
+      {
+        \token_if_eq_charcode:NNTF #2 .
+          { \use_none:n }
+          { \token_if_eq_charcode:NNF #2 ( } % )
+      }
+      { \use:n }
+    { \__msg_kernel_error:nnn { kernel } { c-C-invalid } {#2} }
+    #1 #2
   }
 %    \end{macrocode}
 % \end{macro}
@@ -6190,6 +6210,13 @@
     The~'\iow_char:N\\c'~escape~cannot~be~used~within~
     a~control~sequence~test~'\iow_char:N\\c{...}'.~
     To~combine~several~category~tests,~use~'\iow_char:N\\c[...]'.
+  }
+\__msg_kernel_new:nnnn { kernel } { c-C-invalid }
+  { '\iow_char:N\\cC'~should~be~followed~by~'.'~or~'(',~not~'#1'. }
+  {
+    The~'\iow_char:N\\cC'~construction~restricts~the~next~item~to~be~a~
+    control~sequence~or~the~next~group~to~be~made~of~control~sequences.~
+    It~only~makes~sense~to~follow~it~by~'.'~or~by~a~group.
   }
 \__msg_kernel_new:nnnn { kernel } { c-missing-rbrace }
   { Missing~right~brace~inserted~for~'\iow_char:N\\c'~escape. }
