--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -432,8 +432,9 @@
 % \item[\\cX(\ldots{})] Produces the characters \enquote{\ldots{}} with
 %   category~|X|, which must be one of |CBEMTPUDSLOA| as in regular
 %   expressions.  Parentheses are optional for a single character (which
-%   can be an escape sequence).  This can be nested, for instance
-%   |\cL(Hello\cS\ world)!|
+%   can be an escape sequence).  When nested, the innermost category
+%   code applies, for instance |\cL(Hello\cS\ world)!| gives this text
+%   with standard category codes.
 % \item[\\c\Arg{text}] Produces the control sequence with csname
 %   \meta{text}.  The \meta{text} may contain references to the
 %   submatches |\0|, |\1|, and so on, as in the example for |\u| below.
@@ -5332,7 +5333,19 @@
                   \l_@@_replacement_category_tl
                 \tl_set:Nn \l_@@_replacement_category_tl {#1}
               }
-              { \use:c { @@_replacement_c_#1:w } #2 #3 }
+              {
+                \token_if_eq_meaning:NNT #2 \@@_replacement_escaped:N
+                  {
+                    \@@_char_if_alphanumeric:NTF #3
+                      {
+                        \__msg_kernel_error:nnnn
+                          { kernel } { replacement-catcode-escaped }
+                          {#1} {#3}
+                      }
+                      { }
+                  }
+                \use:c { @@_replacement_c_#1:w } #2 #3
+              }
           }
       }
   }
@@ -6351,6 +6364,16 @@
     can~be~followed~by~one~of~the~letters~'ABCDELMOPSTU'~representing~
     the~character~category.~Then,~a~character~must~follow.~LaTeX~
     reached~the~end~of~the~replacement~when~looking~for~that.
+  }
+\__msg_kernel_new:nnnn { kernel } { replacement-catcode-escaped }
+  {
+    Escaped~letter~or~digit~after~category~code~in~replacement~text.
+  }
+  {
+    In~a~replacement~text,~the~'\iow_char:N\\c'~escape~sequence~
+    can~be~followed~by~one~of~the~letters~'ABCDELMOPSTU'~representing~
+    the~character~category.~Then,~a~character~must~follow,~not~
+    '\iow_char:N\\#2'.
   }
 \__msg_kernel_new:nnnn { kernel } { replacement-catcode-in-cs }
   {
