--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1863,6 +1863,13 @@
     LaTeX~has~been~asked~to~use~a~control~sequence~'#1':\\
     this~has~not~been~defined~yet.
   }
+%<*package>
+\bool_if:NT \l@expl@debug@bool
+  {
+    \@@_kernel_new:nnn { kernel } { debug-unpatchable }
+      { Only~some~definitions~can~be~patched;~'#3'~cannot. }
+  }
+%</package>
 \@@_kernel_new:nnn { kernel } { deprecated-command }
   {
     The~deprecated~command~'#2'~has~been~or~will~be~removed~on~#1.
