Make sure variants of \tl_set_eq:NN obey check-declarations
The Nc, cN, cc variants of \tl_set_eq:NN were direct copies of \cs_set_eq:NN
variants, so they didn't pick up the declarations' checking.  Now fixed, but
I had to use the lower-level \cs_set_eq:NN in one place in l3keys.

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -840,13 +840,9 @@
 %   because that has the correct checking code.
 %    \begin{macrocode}
 \cs_new_eq:NN \bool_set_eq:NN  \tl_set_eq:NN
-\cs_new_eq:NN \bool_set_eq:Nc  \tl_set_eq:Nc
-\cs_new_eq:NN \bool_set_eq:cN  \tl_set_eq:cN
-\cs_new_eq:NN \bool_set_eq:cc  \tl_set_eq:cc
 \cs_new_eq:NN \bool_gset_eq:NN \tl_gset_eq:NN
-\cs_new_eq:NN \bool_gset_eq:Nc \tl_gset_eq:Nc
-\cs_new_eq:NN \bool_gset_eq:cN \tl_gset_eq:cN
-\cs_new_eq:NN \bool_gset_eq:cc \tl_gset_eq:cc
+\cs_generate_variant:Nn \bool_set_eq:NN { Nc, cN, cc }
+\cs_generate_variant:Nn \bool_gset_eq:NN { Nc, cN, cc }
 %    \end{macrocode}
 % \end{macro}
 %
