--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1157,28 +1157,25 @@
 %   For setting token list variables equal to each other.  When checking
 %   is turned on, make sure both variables exist.
 %    \begin{macrocode}
-\cs_new_eq:NN \tl_set_eq:NN  \cs_set_eq:NN
-\cs_new_eq:NN \tl_set_eq:cN  \cs_set_eq:cN
-\cs_new_eq:NN \tl_set_eq:Nc  \cs_set_eq:Nc
-\cs_new_eq:NN \tl_set_eq:cc  \cs_set_eq:cc
-\cs_new_eq:NN \tl_gset_eq:NN \cs_gset_eq:NN
-\cs_new_eq:NN \tl_gset_eq:cN \cs_gset_eq:cN
-\cs_new_eq:NN \tl_gset_eq:Nc \cs_gset_eq:Nc
-\cs_new_eq:NN \tl_gset_eq:cc \cs_gset_eq:cc
 \tex_ifodd:D \l@expl@debug@bool
-  \cs_set_protected:Npn \tl_set_eq:NN #1#2
+  \cs_new_protected:Npn \tl_set_eq:NN #1#2
     {
       \__chk_if_exist_var:N #1
       \__chk_if_exist_var:N #2
       \cs_set_eq:NN #1 #2
     }
-  \cs_set_protected:Npn \tl_gset_eq:NN #1#2
+  \cs_new_protected:Npn \tl_gset_eq:NN #1#2
     {
       \__chk_if_exist_var:N #1
       \__chk_if_exist_var:N #2
       \cs_gset_eq:NN #1 #2
     }
+\else:
+  \cs_new_eq:NN \tl_set_eq:NN  \cs_set_eq:NN
+  \cs_new_eq:NN \tl_gset_eq:NN \cs_gset_eq:NN
 \fi:
+\cs_generate_variant:Nn \tl_set_eq:NN { cN, Nc, cc }
+\cs_generate_variant:Nn \tl_gset_eq:NN { cN, Nc, cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
