Add \debug_log_functions_on/off: and \debug_check_declarations_on/off:
These functions apply the eponymous options of expl3 locally.  They can
only be used if expl3 is loaded with the new option "enable-debug", or
with "check-declarations" or "log-functions".  This is the only way to
avoid impacting performance for people who do not care about such checking.
The commit also applies \__debug_patch:nnNw in a few more places.

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1610,7 +1610,7 @@
 %       signature} \cs{q_mark} \meta{errors} \cs{q_stop} \meta{base
 %       function} \meta{new function}.  If all went well, \meta{errors}
 %     is empty; otherwise, it is a kernel error message, followed by
-%     some clean-up code (\cs{use_none:nnnn}).
+%     some clean-up code (\cs{use_none:nnn}).
 %
 %     Note the space after |#3| and after the following brace group.
 %     Those are ignored by \TeX{} when fetching the last argument for
@@ -1735,7 +1735,7 @@
         \q_mark
         \__msg_kernel_error:nnxx { kernel } { variant-too-long }
           {#5} { \token_to_str:N #3 }
-        \use_none:nnnn
+        \use_none:nnn
         \q_stop
         #3
         #3
@@ -1750,7 +1750,7 @@
         \q_mark
         \__msg_kernel_error:nnxxxx { kernel } { invalid-variant }
           {#7} { \token_to_str:N #5 } {#1} {#2}
-        \use_none:nnnn
+        \use_none:nnn
         \q_stop
         #5
         #5
@@ -1781,29 +1781,35 @@
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_generate_variant:wwNN}
-%   If the variant form has already been defined, log its existence.
+%   If the variant form has already been defined, log its existence
+%   (provided \texttt{log-functions} is active).
 %   Otherwise, make sure that the |\exp_args:N #3| form is defined, and
 %   if it contains |x|, change \cs{@@_tmp:w} locally to
 %   \cs{cs_new_protected:Npx}.  Then define the variant by
 %   combining the |\exp_args:N #3| variant and the base function.
 %    \begin{macrocode}
+\__debug_patch:nnNw
+  {
+    \cs_if_free:NF #4
+      {
+        \__debug_log:x
+          {
+            Variant~\token_to_str:N #4~%
+            already~defined;~ not~ changing~ it~ \msg_line_context:
+          }
+      }
+  }
+  { }
 \cs_new_protected:Npn \@@_generate_variant:wwNN
     #1 \q_mark #2 \q_stop #3#4
   {
     #2
-    \cs_if_free:NTF #4
+    \cs_if_free:NT #4
       {
         \group_begin:
           \@@_generate_internal_variant:n {#1}
           \@@_tmp:w #4 { \exp_not:c { exp_args:N #1 } \exp_not:N #3 }
         \group_end:
-      }
-      {
-        \__chk_log:x
-          {
-            Variant~\token_to_str:N #4~%
-            already~defined;~ not~ changing~ it~ \msg_line_context:
-          }
       }
   }
 %    \end{macrocode}
