--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -831,11 +831,10 @@
 %
 % \begin{macro}[aux]{\__chk_if_free_msg:nn}
 %   This auxiliary is similar to \cs{__chk_if_free_cs:N}, and is used when
-%   defining messages with \cs{msg_new:nnnn}. It could be inlined in
-%   \cs{msg_new:nnnn}, but the experimental \pkg{l3trace} module needs
-%   to disable this check when reloading a package with the extra
-%   tracing information.
+%   defining messages with \cs{msg_new:nnnn}.
 %    \begin{macrocode}
+\__debug_patch:nnNw { }
+  { \__debug_log:x { Defining~message~ #1 / #2 ~\msg_line_context: } }
 \cs_new_protected:Npn \__chk_if_free_msg:nn #1#2
   {
     \msg_if_exist:nnT {#1} {#2}
@@ -844,19 +843,6 @@
           {#1} {#2}
       }
   }
-%<*package>
-\if_bool:N \l@expl@log@functions@bool
-  \cs_gset_protected:Npn \__chk_if_free_msg:nn #1#2
-    {
-      \msg_if_exist:nnT {#1} {#2}
-        {
-          \@@_kernel_error:nnxx { kernel } { message-already-defined }
-            {#1} {#2}
-        }
-      \__chk_log:x { Defining~message~ #1 / #2 ~\msg_line_context: }
-    }
-\fi:
-%</package>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1863,13 +1849,6 @@
     LaTeX~has~been~asked~to~use~a~control~sequence~'#1':\\
     this~has~not~been~defined~yet.
   }
-%<*package>
-\bool_if:NT \l@expl@debug@bool
-  {
-    \@@_kernel_new:nnn { kernel } { debug-unpatchable }
-      { Only~some~definitions~can~be~patched;~'#3'~cannot. }
-  }
-%</package>
 \@@_kernel_new:nnn { kernel } { deprecated-command }
   {
     The~deprecated~command~'#2'~has~been~or~will~be~removed~on~#1.
@@ -1933,21 +1912,6 @@
     LaTeX~has~been~asked~to~define~the~conditional~form~'#1'~of~
     the~function~'#2',~but~only~'TF',~'T',~'F',~and~'p'~forms~exist.
   }
-%<*package>
-\bool_if:NT \l@expl@check@declarations@bool
-  {
-    \@@_kernel_new:nnnn { check } { non-declared-variable }
-      { The~variable~#1~has~not~been~declared~\msg_line_context:. }
-      {
-        Checking~is~active,~and~you~have~tried~do~so~something~like: \\
-        \ \ \tl_set:Nn ~ #1 ~ \{ ~ ... ~ \} \\
-        without~first~having: \\
-        \ \ \tl_new:N ~ #1  \\
-        \\
-        LaTeX~will~create~the~variable~and~continue.
-      }
-  }
-%</package>
 \@@_kernel_new:nnnn { kernel } { scanmark-already-defined }
   { Scan~mark~#1~already~defined. }
   {
@@ -1978,6 +1942,52 @@
     with~a~signature~starting~with~'#1',~but~cannot~change~an~argument~
     from~type~'#3'~to~type~'#4'.
   }
+%    \end{macrocode}
+%
+% Some errors are only needed in package mode if debugging is enabled by
+% one of the options \texttt{enable-debug}, \texttt{check-declarations},
+% \texttt{log-functions}, or on the contrary if debugging is turned off.
+% In format mode the error is somewhat different.
+%    \begin{macrocode}
+%<*package>
+\bool_if:NTF \l@expl@enable@debug@bool
+  {
+    \@@_kernel_new:nnn { kernel } { debug-unpatchable }
+      { Only~some~definitions~can~be~patched;~'#3'~cannot. }
+    \@@_kernel_new:nnnn { check } { non-declared-variable }
+      { The~variable~#1~has~not~been~declared~\msg_line_context:. }
+      {
+        Checking~is~active,~and~you~have~tried~do~so~something~like: \\
+        \ \ \tl_set:Nn ~ #1 ~ \{ ~ ... ~ \} \\
+        without~first~having: \\
+        \ \ \tl_new:N ~ #1  \\
+        \\
+        LaTeX~will~create~the~variable~and~continue.
+      }
+  }
+  {
+    \@@_kernel_new:nnnn { kernel } { enable-debug }
+      { To~use~'#1'~load~expl3~with~the~'enable-debug'~option. }
+      {
+        The~function~'#1'~will~be~ignored~because~it~can~only~work~if~
+        some~internal~functions~in~expl3~have~been~appropriately~
+        defined.~This~only~happens~if~one~of~the~options~
+        'enable-debug',~'check-declarations'~or~'log-functions'~was~
+        given~when~loading~expl3.
+      }
+  }
+%</package>
+%<*initex>
+\@@_kernel_new:nnnn { kernel } { enable-debug }
+  { '#1'~cannot~be~used~in~format~mode. }
+  {
+    The~function~'#1'~will~be~ignored~because~it~can~only~work~if~
+    some~internal~functions~in~expl3~have~been~appropriately~
+    defined.~This~only~happens~in~package~mode~(and~only~if~one~of~
+    the~options~'enable-debug',~'check-declarations'~or~'log-functions'~
+    was~given~when~loading~expl3.
+  }
+%</initex>
 %    \end{macrocode}
 %
 % Some errors only appear in expandable settings,
