--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1511,15 +1511,17 @@
 %
 % \begin{macro}[int]
 %   {\@@_cmd_set:nn, \@@_cmd_set:nx, \@@_cmd_set:Vn, \@@_cmd_set:Vo}
-%   Setting the code for a key first checks that the basic data structures
-%   exist, then saves the code.
+%   Setting the code for a key first logs if appropriate that we are
+%   defining a new key, then saves the code.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_cmd_set:nn #1#2
+\__debug_patch:nnNw
   {
     \cs_if_exist:cF { \c_@@_code_root_tl #1 }
-      { \__chk_log:x { Defining~key~#1~\msg_line_context: } }
-    \cs_set_protected:cpn { \c_@@_code_root_tl #1 } ##1 {#2}
+      { \__debug_log:x { Defining~key~#1~\msg_line_context: } }
   }
+  { }
+\cs_new_protected:Npn \@@_cmd_set:nn #1#2
+  { \cs_set_protected:cpn { \c_@@_code_root_tl #1 } ##1 {#2} }
 \cs_generate_variant:Nn \@@_cmd_set:nn { nx , Vn , Vo }
 %    \end{macrocode}
 % \end{macro}
