--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1157,7 +1157,7 @@
 %   For setting token list variables equal to each other.  When checking
 %   is turned on, make sure both variables exist.
 %    \begin{macrocode}
-\tex_ifodd:D \l@expl@debug@bool
+\tex_ifodd:D \l@expl@enable@debug@bool
   \cs_new_protected:Npn \tl_set_eq:NN #1#2
     {
       \__chk_if_exist_var:N #1
