With enable-debug, wrap all expressions in parentheses (see #376)
Now "\int_eval:n { 123 a }" causes a "Missing parenthesis" error when
encountering the "a" because the argument is passed to \etex_numexpr:D
within ( ).  More precisely, that's only done when debugging is enabled
by one of check-declarations, log-functions, enable-debug, because I
fear it would slow down expl3 too much.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1212,6 +1212,29 @@
 %   needed.
 % \end{function}
 %
+% \begin{function}{\__debug_patch_args:nNw}
+%   \begin{syntax}
+%     \cs{__debug_patch_args:nNw} \Arg{arguments} \meta{definition} \ldots{}
+%   \end{syntax}
+%   Like \cs{__debug_patch:nnNw}, this tweaks the following definition,
+%   but from the \enquote{inside out}.  Namely, it replaces |#1|, |#2|
+%   and so on in the \meta{replacement text} of the definition as
+%   indicated by the \meta{arguments}.  More precisely, a temporary
+%   function is defined using the \meta{definition} with the
+%   \meta{parameter text} and \meta{replacement text}, then the result
+%   of expanding that function once in front of the \meta{arguments} is
+%   used as \meta{parameter text} when defining the actual function.
+%   For instance,
+%   \begin{quote}
+%     \cs{__debug_patch_args:nNw} |{ { (#1) } }| \\
+%     \cs{cs_new:Npn} \cs{int_eval:n} |#1| \\
+%     ~~|{ \__int_value:w \__int_eval:w #1 \__int_eval_end: }|
+%   \end{quote}
+%   replaces |#1| by |(#1)| in the definition of \cs{int_eval:n} when
+%   debugging is enabled.
+%   This fails if the \meta{replacement text} contains~|##|.
+% \end{function}
+%
 % \begin{function}[EXP]{\__cs_count_signature:N, \__cs_count_signature:c}
 %   \begin{syntax}
 %     \cs{__cs_count_signature:N} \meta{function}
@@ -2410,11 +2433,12 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\__debug_patch:nnNw}
+% \begin{macro}[aux,EXP]{\__debug_patch_case:N}
 % \begin{macro}[aux]
 %   {
 %     \__debug_patch_param:NNnnNnp,
-%     \__debug_patch_new:nnNNnn,
-%     \__debug_patch_new_conditional:nnNNnnn
+%     \__debug_patch_cs:nnNNnn,
+%     \__debug_patch_conditional:nnNNnnn
 %   }
 %   When debugging is not enabled, \cs{__debug_patch:nnNw} throws the
 %   patch away.  Otherwise it can be followed by \cs{cs_new:Npn} or
@@ -2429,36 +2453,94 @@
 \tex_ifodd:D \l@expl@enable@debug@bool
   \cs_set_protected:Npn \__debug_patch:nnNw #1#2#3
     {
-      \tex_ifcase:D
-        \if_meaning:w #3 \cs_new_protected:Npn  1~ \fi:
-        \if_meaning:w #3 \cs_new:Npn            1~ \fi:
-        \if_meaning:w #3 \cs_set_protected:Npn  1~ \fi:
-        \if_meaning:w #3 \cs_set:Npn            1~ \fi:
-        \if_meaning:w #3 \cs_gset_protected:Npn 1~ \fi:
-        \if_meaning:w #3 \cs_gset:Npn           1~ \fi:
-        \if_meaning:w #3 \prg_new_protected_conditional:Npnn 2~ \fi:
-        \if_meaning:w #3 \prg_new_conditional:Npnn           2~ \fi:
-        \__msg_kernel_error:nnx { kernel } { debug-unpatchable }
-          { \token_to_str:N #3 }
+      \tex_ifcase:D \__debug_patch_case:N #3
       \or:
         \exp_after:wN \__debug_patch_param:NNnnNnp
-        \exp_after:wN \__debug_patch_new:nnNNnn
+        \exp_after:wN \__debug_patch_cs:nnNNnn
       \else:
         \exp_after:wN \__debug_patch_param:NNnnNnp
-        \exp_after:wN \__debug_patch_new_conditional:nnNNnnn
+        \exp_after:wN \__debug_patch_conditional:nnNNnnn
       \fi:
       \use_none:nn {#1} {#2} #3
     }
+  \cs_set:Npn \__debug_patch_case:N #1
+    {
+      \if_meaning:w #1 \cs_new_protected:Npn  1~ \fi:
+      \if_meaning:w #1 \cs_new:Npn            1~ \fi:
+      \if_meaning:w #1 \cs_set_protected:Npn  1~ \fi:
+      \if_meaning:w #1 \cs_set:Npn            1~ \fi:
+      \if_meaning:w #1 \cs_gset_protected:Npn 1~ \fi:
+      \if_meaning:w #1 \cs_gset:Npn           1~ \fi:
+      \if_meaning:w #1 \prg_new_protected_conditional:Npnn 2~ \fi:
+      \if_meaning:w #1 \prg_new_conditional:Npnn           2~ \fi:
+      0~ %
+      \__msg_kernel_error:nnx { kernel } { debug-unpatchable }
+        { \token_to_str:N #1 }
+    }
   \cs_set_protected:Npn \__debug_patch_param:NNnnNnp #1#2#3#4#5#6#7#
     { #1 {#3} {#4} #5 #6 {#7} }
-  \cs_set_protected:Npn \__debug_patch_new:nnNNnn #1#2#3#4#5#6
+  \cs_set_protected:Npn \__debug_patch_cs:nnNNnn #1#2#3#4#5#6
     { #3 #4 #5 { #1 #6 #2 } }
-  \cs_set_protected:Npn \__debug_patch_new_conditional:nnNNnnn
+  \cs_set_protected:Npn \__debug_patch_conditional:nnNNnnn
       #1#2#3#4#5#6#7
     { #3 #4 #5 {#6} { #1 #7 #2 } }
 \fi:
 %</package>
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[int]{\__debug_patch_args:nNw}
+% \begin{macro}[aux]
+%   {
+%     \__debug_tmp:w,
+%     \__debug_patch_args_param:NNnNnp,
+%     \__debug_patch_args_cs:nNNnn,
+%     \__debug_patch_args_conditional:nNNnnn
+%   }
+%   See \cs{__debug_patch:nnNw}.  The first argument is something like
+%   |{#1}{(#2)}|.  Define a temporary macro using the \meta{parameters}
+%   and \meta{code} of the definition that follows, then expand that
+%   temporary macro in front of the first argument to obtain new
+%   \meta{code}.  Then perform the definition as if that new \meta{code}
+%   was directly typed in the file.  To make it easy to expand in the
+%   definition, treat it as a \enquote{pre}-code to an empty definition.
+%    \begin{macrocode}
+\cs_set_protected:Npn \__debug_patch_args:nNw #1 { }
+%<*package>
+\tex_ifodd:D \l@expl@enable@debug@bool
+  \cs_set_protected:Npn \__debug_patch_args:nNw #1#2
+    {
+      \tex_ifcase:D \__debug_patch_case:N #2
+      \or:
+        \exp_after:wN \__debug_patch_args_param:NNnNnp
+        \exp_after:wN \__debug_patch_args_cs:nNNnn
+      \else:
+        \exp_after:wN \__debug_patch_args_param:NNnNnp
+        \exp_after:wN \__debug_patch_args_conditional:nNNnnn
+      \fi:
+      \use_none:n {#1} #2
+    }
+  \cs_set_protected:Npn \__debug_patch_args_param:NNnNnp #1#2#3#4#5#6#
+    { #1 {#3} #4 #5 {#6} }
+  \cs_set_protected:Npn \__debug_patch_args_cs:nNNnn #1#2#3#4#5
+    {
+      \cs_set:Npn \__debug_tmp:w #4 {#5}
+      \exp_after:wN \__debug_patch_cs:nnNNnn \exp_after:wN
+        { \__debug_tmp:w #1 } { } #2 #3 {#4} { }
+    }
+  \cs_set_protected:Npn \__debug_patch_args_conditional:nNNnnn
+      #1#2#3#4#5#6
+    {
+      \cs_set:Npn \__debug_tmp:w #4 {#6}
+      \exp_after:wN \__debug_patch_conditional:nnNNnnn \exp_after:wN
+        { \__debug_tmp:w #1 } { } #2 #3 {#4} {#5} { }
+    }
+\fi:
+%</package>
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -2745,7 +2827,7 @@
     \exp_args:Nx \__cs_parm_from_arg_count_test:nnF
       {
         \exp_after:wN \exp_not:n
-        \if_case:w \__int_eval:w #2 \__int_eval_end:
+        \if_case:w \__int_eval:w (#2) \__int_eval_end:
              { }
         \or: { ##1 }
         \or: { ##1##2 }
