--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1205,10 +1205,10 @@
   { 1 }
   {
     \cs_if_exist:NTF \normalend
-      { \tex_count:D 38 \scan_stop: }
+      { \tex_count:D 38 ~ }
       {
-        \tex_count:D 16 \scan_stop:
-          \cs_if_exist:NT \loccount { - 1 }
+        \tex_count:D 16 ~ %
+        \cs_if_exist:NT \loccount { - 1 }
       }
   }
   {
@@ -1548,10 +1548,10 @@
   { 1 }
   {
     \cs_if_exist:NTF \normalend
-      { \tex_count:D 39 \scan_stop: }
+      { \tex_count:D 39 ~ }
       {
-        \tex_count:D 17 \scan_stop:
-          \cs_if_exist:NT \loccount { - 1 }
+        \tex_count:D 17 ~
+        \cs_if_exist:NT \loccount { - 1 }
       }
   }
   {
