--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -728,11 +728,13 @@
 %   As we want skips and kerns to have similar behaviour, we try to get similar
 %   results.
 %    \begin{macrocode}
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new_protected:Npn \kern_horizontal:n #1
   {
     \mode_leave_vertical:
     \tex_kern:D \__dim_eval:w #1 \__dim_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new_protected:Npn \kern_vertical:n #1
   {
     \mode_if_vertical:F
@@ -749,6 +751,7 @@
 %   dimension expression support. The non-expanding rule is set up in
 %   horizontal mode as that is usually the best plan.
 %    \begin{macrocode}
+\__debug_patch_args:nNw { { (#1) } { (#2) } { (#3) } }
 \cs_new_protected:Npn \rule:nnn #1#2#3
   {
     \hbox:n
@@ -759,12 +762,14 @@
           width  \__dim_eval:w #3 \__dim_eval_end:
       }
   }
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \rule_horizontal:nn #1#2
   {
     \tex_hrule:D
       height \__dim_eval:w #1 \__dim_eval_end:
       depth  \__dim_eval:w #2 \__dim_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new_protected:Npn \rule_vertical:n #1
   { \tex_vrule:D width \__dim_eval:w #1 \__dim_eval_end: }
 %    \end{macrocode}
