--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1131,13 +1131,15 @@
 % \begin{macro}{\char_show_value_catcode:n}
 %   Simple wrappers around the primitives.
 %    \begin{macrocode}
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \char_set_catcode:nn #1#2
   {
     \tex_catcode:D \__int_eval:w #1 \__int_eval_end:
       = \__int_eval:w #2 \__int_eval_end:
-   }
+  }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new:Npn \char_value_catcode:n #1
-  { \tex_the:D \tex_catcode:D \__int_eval:w #1\__int_eval_end: }
+  { \tex_the:D \tex_catcode:D \__int_eval:w #1 \__int_eval_end: }
 \cs_new_protected:Npn \char_show_value_catcode:n #1
   { \__msg_show_wrap:n { > ~ \char_value_catcode:n {#1} } }
 %    \end{macrocode}
@@ -1269,40 +1271,48 @@
 % \begin{macro}{\char_show_value_sfcode:n}
 %   Pretty repetitive, but necessary!
 %    \begin{macrocode}
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \char_set_mathcode:nn #1#2
   {
     \tex_mathcode:D \__int_eval:w #1 \__int_eval_end:
     = \__int_eval:w #2 \__int_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new:Npn \char_value_mathcode:n #1
-  { \tex_the:D \tex_mathcode:D \__int_eval:w #1\__int_eval_end: }
+  { \tex_the:D \tex_mathcode:D \__int_eval:w #1 \__int_eval_end: }
 \cs_new_protected:Npn \char_show_value_mathcode:n #1
   { \__msg_show_wrap:n { > ~ \char_value_mathcode:n {#1} } }
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \char_set_lccode:nn #1#2
   {
     \tex_lccode:D \__int_eval:w #1 \__int_eval_end:
     = \__int_eval:w #2 \__int_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new:Npn \char_value_lccode:n #1
-  { \tex_the:D \tex_lccode:D \__int_eval:w #1\__int_eval_end: }
+  { \tex_the:D \tex_lccode:D \__int_eval:w #1 \__int_eval_end: }
 \cs_new_protected:Npn \char_show_value_lccode:n #1
   { \__msg_show_wrap:n { > ~ \char_value_lccode:n {#1} } }
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \char_set_uccode:nn #1#2
   {
     \tex_uccode:D \__int_eval:w #1 \__int_eval_end:
     = \__int_eval:w #2 \__int_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new:Npn \char_value_uccode:n #1
-  { \tex_the:D \tex_uccode:D \__int_eval:w #1\__int_eval_end: }
+  { \tex_the:D \tex_uccode:D \__int_eval:w #1 \__int_eval_end: }
 \cs_new_protected:Npn \char_show_value_uccode:n #1
   { \__msg_show_wrap:n { > ~ \char_value_uccode:n {#1} } }
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new_protected:Npn \char_set_sfcode:nn #1#2
   {
     \tex_sfcode:D \__int_eval:w #1 \__int_eval_end:
     = \__int_eval:w #2 \__int_eval_end:
   }
+\__debug_patch_args:nNw { { (#1) } }
 \cs_new:Npn \char_value_sfcode:n #1
-  { \tex_the:D \tex_sfcode:D \__int_eval:w #1\__int_eval_end: }
+  { \tex_the:D \tex_sfcode:D \__int_eval:w #1 \__int_eval_end: }
 \cs_new_protected:Npn \char_show_value_sfcode:n #1
   { \__msg_show_wrap:n { > ~ \char_value_sfcode:n {#1} } }
 %    \end{macrocode}
@@ -1385,6 +1395,7 @@
 %   the interface layer, turn the two arguments into integers up-front so
 %   this is only done once.
 %    \begin{macrocode}
+\__debug_patch_args:nNw { { (#1) } { (#2) } }
 \cs_new:Npn \char_generate:nn #1#2
   {
     \exp:w \exp_after:wN \@@_generate_aux:w
