--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -728,13 +728,14 @@ Don't~ look~ here:~ check~ your~ console~ output!
 \prop_new:N \l_@@_catcodes_prop
 \cs_new:Nn \@@_catcodes_pushing:
   {
+    \__debug_patch_args:nNw { {##1} { (##2) } }
     \cs_set_protected:Npn \char_set_catcode:nn ##1 ##2
       {
         \prop_put:Nxx \l_@@_catcodes_prop
           { \int_eval:n {##1} }
-          { \tex_the:D \tex_catcode:D ##1 }
+          { \tex_the:D \tex_catcode:D \int_eval:n {##1} }
 
-        \tex_catcode:D ##1 = \__int_eval:w ##2 \__int_eval_end:
+        \tex_catcode:D \int_eval:n {##1} = \__int_eval:w ##2 \__int_eval_end:
       }
   }
 %    \end{macrocode}
@@ -742,9 +743,10 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %    \begin{macrocode}
 \cs_new:Nn \@@_catcodes_pop:
   {
+    \__debug_patch_args:nNw { {##1} { (##2) } }
     \cs_set_protected:Npn \char_set_catcode:nn ##1 ##2
       {
-        \tex_catcode:D ##1 = \__int_eval:w ##2 \__int_eval_end:
+        \tex_catcode:D \int_eval:n {##1} = \__int_eval:w ##2 \__int_eval_end:
       }
     \prop_map_inline:Nn \l_@@_catcodes_prop
       { \char_set_catcode:nn {##1} {##2} }
