Make peeking code a bit more robust against catcode 4 (fixes #379)

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -2261,61 +2261,53 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_true_remove:w
   {
-    \group_align_safe_end:
     \tex_afterassignment:D \@@_true_aux:w
     \cs_set_eq:NN \@@_tmp:w
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[TF]{\@@_token_generic:NN}
-%   The generic function stores the test token in both implicit and
+% \begin{macro}{\@@_token_generic_aux:NNNTF}
+%   The generic functions store the test token in both implicit and
 %   explicit modes, and the \texttt{true} and \texttt{false} code as
 %   token lists, more or less. The two branches have to be absorbed here
 %   as the input stream needs to be cleared for the peek function itself.
+%   Here, |#1| is \cs{@@_true_remove:w} when removing the token and
+%   \cs{@@_true_aux:w} otherwise.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_token_generic:NNTF #1#2#3#4
+\cs_new_protected:Npn \@@_token_generic_aux:NNNTF #1#2#3#4#5
   {
-    \cs_set_eq:NN \l_@@_search_token #2
-    \tl_set:Nn \l_@@_search_tl {#2}
-    \cs_set:Npx \@@_true:w
-      {
-        \exp_not:N \group_align_safe_end:
-        \exp_not:n {#3}
-      }
-    \cs_set:Npx \@@_false:w
+    \group_align_safe_begin:
+    \cs_set_eq:NN \l_@@_search_token #3
+    \tl_set:Nn \l_@@_search_tl {#3}
+    \cs_set:Npx \@@_true_aux:w
       {
         \exp_not:N \group_align_safe_end:
         \exp_not:n {#4}
       }
-    \group_align_safe_begin:
-      \peek_after:Nw #1
+    \cs_set_eq:NN \@@_true:w #1
+    \cs_set:Npx \@@_false:w
+      {
+        \exp_not:N \group_align_safe_end:
+        \exp_not:n {#5}
+      }
+    \peek_after:Nw #2
   }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[TF]{\@@_token_generic:NN, \@@_token_remove_generic:NN}
+%   For token removal there needs to be a call to the auxiliary
+%   function which does the work.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_token_generic:NNTF
+  { \@@_token_generic_aux:NNNTF \@@_true_aux:w }
 \cs_new_protected:Npn \@@_token_generic:NNT #1#2#3
   { \@@_token_generic:NNTF #1 #2 {#3} { } }
 \cs_new_protected:Npn \@@_token_generic:NNF #1#2#3
   { \@@_token_generic:NNTF #1 #2 { } {#3} }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}[TF]{\@@_token_remove_generic:NN}
-%   For token removal there needs to be a call to the auxiliary
-%   function which does the work.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_token_remove_generic:NNTF #1#2#3#4
-  {
-    \cs_set_eq:NN \l_@@_search_token #2
-    \tl_set:Nn \l_@@_search_tl {#2}
-    \cs_set_eq:NN \@@_true:w \@@_true_remove:w
-    \cs_set:Npx \@@_true_aux:w { \exp_not:n {#3} }
-    \cs_set:Npx \@@_false:w
-      {
-        \exp_not:N \group_align_safe_end:
-        \exp_not:n {#4}
-      }
-    \group_align_safe_begin:
-      \peek_after:Nw #1
-  }
+\cs_new_protected:Npn \@@_token_remove_generic:NNTF
+  { \@@_token_generic_aux:NNNTF \@@_true_remove:w }
 \cs_new_protected:Npn \@@_token_remove_generic:NNT #1#2#3
   { \@@_token_remove_generic:NNTF #1 #2 {#3} { } }
 \cs_new_protected:Npn \@@_token_remove_generic:NNF #1#2#3
