[xparse] Validators should set ProcessedArgument

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -3833,6 +3833,7 @@
         \__msg_kernel_error:nnxxx { xparse } { type-mismatch }
           { \tl_to_str:n {#1} } { int } { \iow_char:N \\ \l_@@_function_tl }
       }
+    \tl_set:Nn \ProcessedArgument { #1 }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3847,6 +3848,7 @@
         \__msg_kernel_error:nnxxx { xparse } { type-mismatch }
           { \tl_to_str:n {#1} } { fp } { \iow_char:N \\ \l_@@_function_tl }
       }
+    \tl_set:Nn \ProcessedArgument { #1 }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3861,6 +3863,7 @@
         \__msg_kernel_error:nnxxx { xparse } { type-mismatch }
           { \tl_to_str:n {#1} } { dim } { \iow_char:N \\ \l_@@_function_tl }
       }
+    \tl_set:Nn \ProcessedArgument { #1 }
   }
 %    \end{macrocode}
 % \end{macro}
