--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -110,6 +110,7 @@
 %<l3str>{l3str}
 %<l3tl>{l3tl}
 %<l3tl-analysis>{l3tl-analysis}
+%<l3tl-build>{l3tl-build}
 %<l3token>{l3token}
 %    \end{macrocode}
 %
@@ -129,20 +130,20 @@
 \typeout{** }
 \typeout{** Its functionality is now only provided as part of the expl3 package.}
 \typeout{** }
-%<!l3regex|l3sort|l3tl-analysis>\typeout{** After showing you an error message you can hit <return> we will continue}
-%<!l3regex|l3sort|l3tl-analysis>\typeout{** for now by loading expl3 for you. However, the old packages will be}
-%<!l3regex|l3sort|l3tl-analysis>\typeout{** removed entirely at the end of 2017.}
-%<l3regex|l3sort|l3tl-analysis>\typeout{** The old packages will be removed entirely at the end of 2018.}
+%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** After showing you an error message you can hit <return> we will continue}
+%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** for now by loading expl3 for you. However, the old packages will be}
+%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** removed entirely at the end of 2017.}
+%<l3regex|l3sort|l3tl-analysis|l3tl-build>\typeout{** The old packages will be removed entirely at the end of 2018.}
 \typeout{** }
 \typeout{** Therefore, please replace '\string\usepackage{\old@liii@module@name}'}
 \typeout{** with '\string\usepackage{expl3}' in your documents as soon as possible.}
 \typeout{** }
 \typeout{*******************************************************************}
-%<!l3regex|l3sort|l3tl-analysis>\PackageError
-%<l3regex|l3sort|l3tl-analysis>\PackageWarning
+%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\PackageError
+%<l3regex|l3sort|l3tl-analysis|l3tl-build>\PackageWarning
   \old@liii@module@name{This package is obsolete ---
    use 'expl3' instead}
-%<!l3regex|l3sort|l3tl-analysis>  \@ehc
+%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>  \@ehc
 %    \end{macrocode}
 %    Finally load \texttt{expl3} so that the user can continue for now.
 %    \begin{macrocode}
