--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -273,16 +273,17 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[TF, added = 2014-07-02]{\file_if_exist_input:n}
+% \begin{function}[added = 2014-07-02]{\file_if_exist_input:n, \file_if_exist_input:nF}
 %   \begin{syntax}
 %     \cs{file_if_exist_input:n} \Arg{file name}
-%     \cs{file_if_exist_input:nTF} \Arg{file name} \Arg{true code} \Arg{false code}
+%     \cs{file_if_exist_input:nF} \Arg{file name} \Arg{false code}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by
-%   \cs{file_path_include:n}. If found, inserts the \meta{true code} then
+%   \cs{file_path_include:n}. If found then
 %   reads in the file as additional \LaTeX{} source as described for
-%   \cs{file_input:n}. Note that \cs{file_if_exist_input:n} does not raise
+%   \cs{file_input:n}, otherwise inserts the \meta{false code}.
+%   Note that these functions do not raise
 %   an error if the file is not found, in contrast to \cs{file_input:n}.
 % \end{function}
 %
@@ -1711,9 +1712,10 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[TF]{\file_if_exist_input:n}
-%   Input of a file with a test for existence cannot be done the usual
-%   way as the tokens to insert are in an odd place.
+% \begin{macro}{\file_if_exist_input:n, \file_if_exist_input:nF}
+%   Input of a file with a test for existence.  We do not define the |T|
+%   or |TF| variants because the most useful place to place the
+%   \meta{true code} would be inconsistent with other conditionals.
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_if_exist_input:n #1
   {
@@ -1721,31 +1723,12 @@
     \str_if_empty:NF \l__file_full_name_str
       { \@@_input:V \l__file_full_name_str }
   }
-\cs_new_protected:Npn \file_if_exist_input:nT #1#2
-  {
-    \file_get_full_name:nN {#1} \l__file_full_name_str
-    \str_if_empty:NF \l__file_full_name_str
-      {
-        #2
-        \@@_input:V \l__file_full_name_str
-      }
-  }
 \cs_new_protected:Npn \file_if_exist_input:nF #1#2
   {
     \file_get_full_name:nN {#1} \l__file_full_name_str
     \str_if_empty:NTF \l__file_full_name_str
       {#2}
       { \@@_input:V \l__file_full_name_str }
-  }
-\cs_new_protected:Npn \file_if_exist_input:nTF #1#2#3
-  {
-    \file_get_full_name:nN {#1} \l__file_full_name_str
-    \str_if_empty:NTF \l__file_full_name_str
-      {#3}
-      {
-        #2
-        \@@_input:V \l__file_full_name_str
-      }
   }
 %    \end{macrocode}
 % \end{macro}
